# charmed-icons

./: pyproject.toml
.github/workflows/: ci.yml
scripts/: svg_to_png.py
