[tool.poetry]
name = "charmed-icons"
version = "0.1.0"
description = ""
authors = ["cayasde"]
license = "LICENSE.md"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13.1"
cairosvg = "^2.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false